<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/registro"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loggin"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/eLoggin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="loggin"
                android:inputType="textPersonName"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="Password"
                android:password="true"
                android:inputType="textPersonName"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password2"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ePassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="Repetir password"
                android:password="true"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/eMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="Correo electrónico"
                android:textSize="20sp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha de nacimiento"
            android:layout_margin="10dp"
            android:onClick="showDatePickerDialog"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/eDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="fecha"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="15sp"

            />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ciudad"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/sCiudades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rMasculino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/rFemenino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/femenino" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cine"
                android:id="@+id/cCine"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dormir"
                android:id="@+id/cDormir"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comer"
                android:id="@+id/cComer"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bailar"
                android:id="@+id/cBailar"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Aceptar"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/bAceptar"
                android:onClick="Aceptar"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informacion"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>
</ScrollView>
